--- a/apps/default/funding/templates/funding/all.html
+++ b/apps/default/funding/templates/funding/all.html
@@ -12,7 +12,7 @@
 					<div class="progress">
 						<div class="progress-bar" role="progressbar" style="width: <?php echo $user->bar; ?>%" aria-valuenow="<?php echo $user->bar; ?>" aria-valuemin="0" aria-valuemax="<?php echo($user->amount) ?>"></div>
 					</div>
-					<p><?php echo $context['currency_symbol'].$user->raised; ?> {{LANG raised_of}} <?php echo $context['currency_symbol'].$user->amount; ?></p>
+					<p><?php echo $context['currency_symbol'].$user->raised; ?> Planteado de <?php echo $context['currency_symbol'].$user->amount; ?></p>
 				</div>
 			</div>
 		</div>
