--- a/apps/default/funding/templates/funding/index.html
+++ b/apps/default/funding/templates/funding/index.html
@@ -31,9 +31,9 @@
             <div class="progress fund_progress">
               <div class="progress-bar" role="progressbar" style="width: <?php echo $context['fund']->bar; ?>%" aria-valuenow="<?php echo $context['fund']->bar; ?>" aria-valuemin="0" aria-valuemax="<?php echo($context['fund']->amount) ?>"></div>
             </div>
-            <p class="text-center"><?php echo $context['currency_symbol'].$context['fund']->raised; ?> {{LANG raised_of}} <?php echo $context['currency_symbol'].$context['fund']->amount; ?></p>
+            <p class="text-center"><?php echo $context['currency_symbol'].$context['fund']->raised; ?> Planteado de <?php echo $context['currency_symbol'].$context['fund']->amount; ?></p>
 			<hr>
-			<h3 class="text-center fund_dnt_hd"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M9.06,1.93C7.17,1.92 5.33,3.74 6.17,6H3A2,2 0 0,0 1,8V10A1,1 0 0,0 2,11H11V8H13V11H22A1,1 0 0,0 23,10V8A2,2 0 0,0 21,6H17.83C19,2.73 14.6,0.42 12.57,3.24L12,4L11.43,3.22C10.8,2.33 9.93,1.94 9.06,1.93M9,4C9.89,4 10.34,5.08 9.71,5.71C9.08,6.34 8,5.89 8,5A1,1 0 0,1 9,4M15,4C15.89,4 16.34,5.08 15.71,5.71C15.08,6.34 14,5.89 14,5A1,1 0 0,1 15,4M2,12V20A2,2 0 0,0 4,22H20A2,2 0 0,0 22,20V12H13V20H11V12H2Z" /></svg></span>{{LANG donate}}</h3>
+			<h3 class="text-center fund_dnt_hd"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M9.06,1.93C7.17,1.92 5.33,3.74 6.17,6H3A2,2 0 0,0 1,8V10A1,1 0 0,0 2,11H11V8H13V11H22A1,1 0 0,0 23,10V8A2,2 0 0,0 21,6H17.83C19,2.73 14.6,0.42 12.57,3.24L12,4L11.43,3.22C10.8,2.33 9.93,1.94 9.06,1.93M9,4C9.89,4 10.34,5.08 9.71,5.71C9.08,6.34 8,5.89 8,5A1,1 0 0,1 9,4M15,4C15.89,4 16.34,5.08 15.71,5.71C15.08,6.34 14,5.89 14,5A1,1 0 0,1 15,4M2,12V20A2,2 0 0,0 4,22H20A2,2 0 0,0 22,20V12H13V20H11V12H2Z" /></svg></span>Donar</h3>
             <div class="fund_input">
                 <input type="number" name="amount" class="form-control" placeholder="0.00" id="donate_amount" onkeyup="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');">
                 <div id="place"></div>
@@ -57,7 +57,7 @@
 
                 <button class="bank_payment btn" onclick="Pxp_BankPayment('');">
                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="47.001px" height="47.001px" viewBox="0 0 47.001 47.001" style="enable-background:new 0 0 47.001 47.001;" xml:space="preserve"><path fill="currentColor" d="M44.845,42.718H2.136C0.956,42.718,0,43.674,0,44.855c0,1.179,0.956,2.135,2.136,2.135h42.708c1.18,0,2.136-0.956,2.136-2.135C46.979,43.674,46.023,42.718,44.845,42.718z"></path><path fill="currentColor" d="M4.805,37.165c-1.18,0-2.136,0.956-2.136,2.136s0.956,2.137,2.136,2.137h37.37c1.18,0,2.136-0.957,2.136-2.137s-0.956-2.136-2.136-2.136h-0.533V17.945h0.533c0.591,0,1.067-0.478,1.067-1.067s-0.478-1.067-1.067-1.067H4.805c-0.59,0-1.067,0.478-1.067,1.067s0.478,1.067,1.067,1.067h0.534v19.219H4.805z M37.37,17.945v19.219h-6.406V17.945H37.37zM26.692,17.945v19.219h-6.406V17.945H26.692z M9.609,17.945h6.406v19.219H9.609V17.945z"></path><path fill="currentColor" d="M2.136,13.891h42.708c0.007,0,0.015,0,0.021,0c1.181,0,2.136-0.956,2.136-2.136c0-0.938-0.604-1.733-1.443-2.021l-21.19-9.535c-0.557-0.25-1.194-0.25-1.752,0L1.26,9.808c-0.919,0.414-1.424,1.412-1.212,2.396C0.259,13.188,1.129,13.891,2.136,13.891z"></path></svg>
-                        {{LANG bank_transfer}}              
+                    transferencia bancaria              
                 </button>
                 <?php } ?>
                 <input type="hidden" class="form-control" id="fund_id" value="<?php echo($context['fund']->id) ?>">
@@ -77,7 +77,7 @@
 		 	</div>
 			</div>
 			<div class="fund_raise">
-				<h4 class="mt-0">{{LANG recent_donations}}</h4>
+				<h4 class="mt-0">Donaciones recientes</h4>
 			<?php if (empty($context['recent'])) { ?>
 				<h5 class="empty_state">
 					<svg xmlns="http://www.w3.org/2000/svg" class="confetti" viewBox="0 0 1081 601"><path class="st0" d="M711.8 91.5c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7C695.2 84 702.7 91.5 711.8 91.5zM711.8 64.1c5.9 0 10.7 4.8 10.7 10.7s-4.8 10.7-10.7 10.7 -10.7-4.8-10.7-10.7S705.9 64.1 711.8 64.1z"></path><path class="st0" d="M74.5 108.3c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7C57.9 100.9 65.3 108.3 74.5 108.3zM74.5 81c5.9 0 10.7 4.8 10.7 10.7 0 5.9-4.8 10.7-10.7 10.7s-10.7-4.8-10.7-10.7S68.6 81 74.5 81z"></path><path class="st1" d="M303 146.1c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7C286.4 138.6 293.8 146.1 303 146.1zM303 118.7c5.9 0 10.7 4.8 10.7 10.7 0 5.9-4.8 10.7-10.7 10.7s-10.7-4.8-10.7-10.7C292.3 123.5 297.1 118.7 303 118.7z"></path><path class="st2" d="M243.4 347.4c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7S234.2 347.4 243.4 347.4zM243.4 320c5.9 0 10.7 4.8 10.7 10.7 0 5.9-4.8 10.7-10.7 10.7s-10.7-4.8-10.7-10.7S237.5 320 243.4 320z"></path><path class="st1" d="M809.8 542.3c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7C793.2 534.8 800.7 542.3 809.8 542.3zM809.8 514.9c5.9 0 10.7 4.8 10.7 10.7s-4.8 10.7-10.7 10.7 -10.7-4.8-10.7-10.7S803.9 514.9 809.8 514.9z"></path><path class="st3" d="M1060.5 548.3c9.2 0 16.7-7.5 16.7-16.7s-7.5-16.7-16.7-16.7 -16.7 7.5-16.7 16.7C1043.9 540.8 1051.4 548.3 1060.5 548.3zM1060.5 520.9c5.9 0 10.7 4.8 10.7 10.7s-4.8 10.7-10.7 10.7 -10.7-4.8-10.7-10.7S1054.6 520.9 1060.5 520.9z"></path><path class="st3" d="M387.9 25.2l7.4-7.4c1.1-1.1 1.1-3 0-4.1s-3-1.1-4.1 0l-7.4 7.4 -7.4-7.4c-1.1-1.1-3-1.1-4.1 0s-1.1 3 0 4.1l7.4 7.4 -7.4 7.4c-1.1 1.1-1.1 3 0 4.1s3 1.1 4.1 0l7.4-7.4 7.4 7.4c1.1 1.1 3 1.1 4.1 0s1.1-3 0-4.1L387.9 25.2z"></path><path class="st3" d="M368.3 498.6l7.4-7.4c1.1-1.1 1.1-3 0-4.1s-3-1.1-4.1 0l-7.4 7.4 -7.4-7.4c-1.1-1.1-3-1.1-4.1 0s-1.1 3 0 4.1l7.4 7.4 -7.4 7.4c-1.1 1.1-1.1 3 0 4.1s3 1.1 4.1 0l7.4-7.4 7.4 7.4c1.1 1.1 3 1.1 4.1 0s1.1-3 0-4.1L368.3 498.6z"></path><path class="st3" d="M16.4 270.2l7.4-7.4c1.1-1.1 1.1-3 0-4.1s-3-1.1-4.1 0l-7.4 7.4 -7.4-7.4c-1.1-1.1-3-1.1-4.1 0s-1.1 3 0 4.1l7.4 7.4 -7.4 7.4c-1.1 1.1-1.1 3 0 4.1s3 1.1 4.1 0l7.4-7.4 7.4 7.4c1.1 1.1 3 1.1 4.1 0s1.1-3 0-4.1L16.4 270.2z"></path><path class="st2" d="M824.7 351.1l7.4-7.4c1.1-1.1 1.1-3 0-4.1s-3-1.1-4.1 0l-7.4 7.4 -7.4-7.4c-1.1-1.1-3-1.1-4.1 0s-1.1 3 0 4.1l7.4 7.4 -7.4 7.4c-1.1 1.1-1.1 3 0 4.1s3 1.1 4.1 0l7.4-7.4 7.4 7.4c1.1 1.1 3 1.1 4.1 0s1.1-3 0-4.1L824.7 351.1z"></path><path class="st1" d="M146.3 573.6H138v-8.3c0-1.3-1-2.3-2.3-2.3s-2.3 1-2.3 2.3v8.3h-8.3c-1.3 0-2.3 1-2.3 2.3s1 2.3 2.3 2.3h8.3v8.3c0 1.3 1 2.3 2.3 2.3s2.3-1 2.3-2.3v-8.3h8.3c1.3 0 2.3-1 2.3-2.3S147.6 573.6 146.3 573.6z"></path><path class="st1" d="M1005.6 76.3h-8.3V68c0-1.3-1-2.3-2.3-2.3s-2.3 1-2.3 2.3v8.3h-8.3c-1.3 0-2.3 1-2.3 2.3s1 2.3 2.3 2.3h8.3v8.3c0 1.3 1 2.3 2.3 2.3s2.3-1 2.3-2.3v-8.3h8.3c1.3 0 2.3-1 2.3-2.3S1006.8 76.3 1005.6 76.3z"></path><path class="st1" d="M95.5 251.6c-3.5 0-6.3 2.8-6.3 6.3 0 3.5 2.8 6.3 6.3 6.3s6.3-2.8 6.3-6.3S99 251.6 95.5 251.6z"></path><path class="st0" d="M1032 281.8c-3.5 0-6.3 2.8-6.3 6.3s2.8 6.3 6.3 6.3 6.3-2.8 6.3-6.3S1035.5 281.8 1032 281.8z"></path><path class="st2" d="M741.6 139.3c-3.5 0-6.3 2.8-6.3 6.3s2.8 6.3 6.3 6.3 6.3-2.8 6.3-6.3S745 139.3 741.6 139.3z"></path><path class="st3" d="M890.7 43.5c3.3 0 6-2.7 6-6s-2.7-6-6-6 -6 2.7-6 6C884.8 40.8 887.4 43.5 890.7 43.5z"></path><path class="st0" d="M164.3 537.6c3.3 0 6-2.7 6-6s-2.7-6-6-6 -6 2.7-6 6C158.4 535 161 537.6 164.3 537.6z"></path></svg>
@@ -117,7 +117,7 @@
 <div class="confirm--modal bank_payment_donate_modal" style="display: none !important;">
     <div class="confirm--modal--inner">
         <div class="confirm--modal--body dt_bank_trans_modal">
-            <h5>{{LANG bank_transfer}}</h5>
+            <h5>transferencia bancaria</h5>
             <div class="bank_alert"></div>
             <?php echo $config['bank_description'];?>
             <br>
@@ -133,14 +133,14 @@
                 <div id="fake_img_holder"></div>
                 <div class="upload_fk_image" onclick="document.getElementById('upload-image').click(); return false">
                     <div class="upload_fk_image_content">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" /></svg> {{LANG upload_file}}
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 24 24"><path fill="currentColor" d="M9,16V10H5L12,3L19,10H15V16H9M5,20V18H19V20H5Z" /></svg> Subir foto
                     </div>
                 </div>
             </div>
         </div>
         <div class="confirm--modal--footer">
-            <button class="btn btn-default" data-confirm--modal-dismiss>{{LANG cancel}}</button>
-            <button class="btn btn-danger btn-red send_bank">{{LANG send}}</button>
+            <button class="btn btn-default" data-confirm--modal-dismiss>Cancelar</button>
+            <button class="btn btn-danger btn-red send_bank">Enviar</button>
             <form class="bank_transfer_form">
                 <input class="hidden" id="upload-image" type="file" name="image" multiple accept="image/*">
                 <input class="hidden" type="text" name="type" value="donate">
@@ -226,7 +226,7 @@ $(document).ready(function() {
         if (amount > 0 && fund_id > 0) {
             $('#donate_price').attr('value', amount);
             var click_event = "$('#upload-image').trigger('click');";
-            $(".images-renderer").html('<div class="select-images" onclick="'+click_event+'"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg><h5>{{LANG choose_an_image}}</h5></span></div>');
+            $(".images-renderer").html('<div class="select-images" onclick="'+click_event+'"><span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg><h5>Elige una imagen</h5></span></div>');
             $('#configreset').click();
             $('.bank_payment_donate_modal').fadeIn(250);
         }
@@ -252,12 +252,12 @@ $(document).ready(function() {
     function Pxp_LoadMoreFund(self) {
         var last_id = $('.fund_item').last().attr('data-recent');
         var fund_id = <?php echo $context['fund']->id; ?>;
-        $(self).find('span').text('{{LANG please_wait}}');
+        $(self).find('span').text('Por favor espera..');
         $.post(link('profile/load_more_recent_raise'), {id: last_id,fund_id:fund_id}, function(data, textStatus, xhr) {
             if (data.status == 200) {
                 if (data.html != '') {
                     $('.list').append(data.html);
-                    $(self).find('span').text('{{LANG load_more}}');
+                    $(self).find('span').text('Carga más');
                 }
                 else{
                     $('.fund_btn').remove();
@@ -277,7 +277,7 @@ $(document).ready(function() {
 
 
     function Pxp_DonateUsingStripe(self) {
-        $(self).find('span').html("{{LANG please_wait}}");
+        $(self).find('span').html("Por favor espera..");
         $('.pp_flat_btn').attr('disabled', 'true');
         var amount = $('#donate_amount').val();
         var fund_id = $('#fund_id').val();
@@ -294,7 +294,7 @@ $(document).ready(function() {
                         location.reload();
                      } else {
                         $('.pp_flat_btn').removeAttr('disabled');
-                        $(self).find('span').html("{{LANG donate}}");
+                        $(self).find('span').html("Donar");
                      }
                   });
                 }
@@ -324,12 +324,12 @@ $(document).ready(function() {
                 singleton: true
             });
             $('.pp_flat_btn').removeAttr('disabled');
-            $(self).find('span').html("{{LANG donate}}");
+            $(self).find('span').html("Donar");
         }
         
     }    
     function Pxp_DonateUsingPaypal(self) {
-        $(self).find('span').html("{{LANG please_wait}}");
+        $(self).find('span').html("Por favor espera..");
         $('.pp_flat_btn').attr('disabled', 'true');
         var amount = $('#donate_amount').val();
         var fund_id = $('#fund_id').val();
@@ -349,7 +349,7 @@ $(document).ready(function() {
                     });
                 }
                 $('.pp_flat_btn').removeAttr('disabled');
-                $(self).find('span').html("{{LANG donate}}");
+                $(self).find('span').html("Donar");
             });
 
         }
@@ -362,7 +362,7 @@ $(document).ready(function() {
                 singleton: true
             });
             $('.pp_flat_btn').removeAttr('disabled');
-            $(self).find('span').html("{{LANG donate}}");
+            $(self).find('span').html("Donar");
         }
     }
 </script>
