--- a/apps/default/funding_acquisition/templates/funding_acquisition/index.html
+++ b/apps/default/funding_acquisition/templates/funding_acquisition/index.html
@@ -4,27 +4,27 @@
             <form class="form row pp_sett_form" id="create_fund" enctype="multipart/form-data">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					<h3 class="text-center">{{LANG funding}}</h3>
+					<h3 class="text-center">Crear nueva solicitud de financiación</h3>
 					<br>
                 <div class="col-md-12">
                     <div class="pp_mat_input">
                         <input required="true" type="text" name="title" class="form-control">
                         <span class="bar"></span>
-                        <label>{{LANG title}}</label>
+                        <label>Título</label>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="pp_mat_input">
                         <input required="true" type="text" name="amount" class="form-control">
                         <span class="bar"></span>
-                        <label>{{LANG amount}}</label>
+                        <label>Cantidad</label>
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="pp_mat_input">
                         <textarea class="form-control" name="description" rows="3"></textarea>
                         <span class="bar"></span>
-                        <label>{{LANG description}}</label>
+                        <label>Descripción</label>
                     </div>
                 </div>
                 <div class="clear"></div>
