--- a/apps/default/go_pro/templates/go_pro/index.html
+++ b/apps/default/go_pro/templates/go_pro/index.html
@@ -21,7 +21,7 @@
 				<div class="col-md-4">
 					<div class="text-center go_pro_plan free_plan">
 						<b>$0</b>
-						<h3>{{LANG free_member}}</h3>
+						<h3>Miembro gratuito</h3>
 						<hr>
 						<p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#f44336" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"></path></svg> {{LANG featured_member}}</p>
 						<p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#f44336" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"></path></svg> {{LANG verified_badge}}</p>
@@ -30,7 +30,7 @@
 						<?php } ?>
 						<p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#f44336" d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"></path></svg> {{LANG profile_Style}}</p>
 						<div class="button_go_pro">
-							<button onclick="location.href='{{CONFIG site_url}}';"><span>{{LANG stay_free}}</span></button>
+							<button onclick="location.href='{{CONFIG site_url}}';"><span>Mantente Libre</span></button>
 						</div>
 					</div>
 				</div>
