--- a/apps/default/home/templates/home/includes/embed-video.html
+++ b/apps/default/home/templates/home/includes/embed-video.html
@@ -8,7 +8,7 @@
 	</div>
   	<form class="form" id="embed-post-video" action="{{CONFIG site_url}}/aj/posts/embed-post-video" autocomplete="true">
 		<div class="form-group">
-	      	<textarea class="form-control" name="caption" rows="3" placeholder="{{LANG add_post_caption}}"></textarea>
+	      	<textarea class="form-control" name="caption" rows="3" placeholder="Agregar título de publicación"></textarea>
 		</div>
       	<div class="form-group fetch-url">
       		<div class="video-url">
@@ -20,8 +20,8 @@
       		<div class="form-group" id="embed-iframe"></div>
       	</div>
       	<div class="form-group publish">
-      		<button type="submit" class="btn btn-info">{{LANG publish}}</button>
-      		<button type="reset" class="btn btn-default" id="close-anim-modal">{{LANG close}}</button>
+      		<button type="submit" class="btn btn-info">Publicar</button>
+      		<button type="reset" class="btn btn-default" id="close-anim-modal">Cerrar</button>
       	</div>
       	<input type="hidden" id="video_id" name="video_id">
       	<input type="hidden" id="embed" name="embed">
