--- a/apps/default/home/templates/home/includes/sidebar.html
+++ b/apps/default/home/templates/home/includes/sidebar.html
@@ -9,7 +9,7 @@
 	<div id="home-sidebar-sticky">
 		<?php if ($context['trending']) { ?>
 			<div class="featured-posts">
-				<h5>{{LANG featured_posts}}</h5>
+				<h5>Publicaciones destacadas</h5>
 				<div class="fluid list">
 					<?php foreach ($context['trending'] as $key => $post_data) { ?>
 						<div class="item" id="">
