--- a/apps/default/home/templates/home/js/publisher-box.html
+++ b/apps/default/home/templates/home/js/publisher-box.html
@@ -92,14 +92,14 @@
         </div>
         <form class="form" id="edit-post-caption" action="{{CONFIG site_url}}/aj/posts/update" autocomplete="true">
             <div class="form-group">
-                <textarea class="form-control" name="caption" rows="4" id="caption" placeholder="{{LANG add_post_caption}}"></textarea>
+                <textarea class="form-control" name="caption" rows="4" id="caption" placeholder="Agregar título de publicación"></textarea>
             </div>
             <div class="form-group publish">
                 <button type="submit" class="btn btn-info">
                     <i class="la la-paper-plane"></i> {{LANG save_changes}}
                 </button>
                 <button type="reset" class="btn btn-default" id="close-anim-modal">
-                    <i class="la la-ban"></i> {{LANG close}}
+                    <i class="la la-ban"></i> Cerrar
                 </button>
             </div>
             <input type="hidden" id="post_id" name="post_id">
