--- a/apps/default/main/templates/header/header.html
+++ b/apps/default/main/templates/header/header.html
@@ -125,10 +125,10 @@
                     </li>
                 <?php } else{ ?>
                     <li>
-                        <a href="<?php echo(pxp_link('welcome')); ?>">{{LANG login}}</a>
+                        <a href="<?php echo(pxp_link('welcome')); ?>">Iniciar sesión</a>
                     </li>
 					<li>
-                        <a href="<?php echo(pxp_link('signup')); ?>">{{LANG signup}}</a>
+                        <a href="<?php echo(pxp_link('signup')); ?>">Iniciar sesión</a>
                     </li>
                 <?php } ?>
             </ul>
