--- a/apps/default/main/templates/modals/edit-post.html
+++ b/apps/default/main/templates/modals/edit-post.html
@@ -6,7 +6,7 @@
 		<form class="form">
 			<div class="modal--body">
 				<div class="form-group">
-					<textarea name="caption" id="caption" rows="4" class="form-control" placeholder="{{LANG add_post_caption}}"></textarea>
+					<textarea name="caption" id="caption" rows="4" class="form-control" placeholder="Agregar título de publicación"></textarea>
 				</div>
 			</div>
 			<div class="modal--footer">
