--- a/apps/default/settings/templates/settings/includes/withdraw.html
+++ b/apps/default/settings/templates/settings/includes/withdraw.html
@@ -5,7 +5,7 @@
 			<div class="col-md-10">
 				<div class="my_wallet_cont">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M20,7V5c0-1.103-0.897-2-2-2H5C3.794,3,2,3.799,2,6v11c0,2.201,1.794,3,3,3h15c1.104,0,2-0.896,2-2V9 C22,7.896,21.104,7,20,7z M4,6c0-0.805,0.55-0.988,1-1h13v2H5.012C4.55,6.988,4,6.805,4,6z M19,15h-2v-3h2V15z"></path></svg> 
-					<h3>{{LANG available_balance}}<br><b><?php echo($context['currency_symbol'].$context['me']['balance']) ?></b></h3>
+					<h3>Saldo disponible<br><b><?php echo($context['currency_symbol'].$context['me']['balance']) ?></b></h3>
 				</div>
 			</div>
 			<div class="col-md-1"></div>
@@ -29,7 +29,7 @@
 					<input required="true" type="number" name="amount" class="form-control" min="50">
 					<span class="bar"></span>
 					<span>{{LANG min}}: <?php echo $context['currency_symbol']; ?>50</span>
-					<label>{{LANG amount}}*</label>
+					<label>Cantidad *</label>
 				</div>
 				<div class="pp_load_loader"><button class="btn btn-info pp_flat_btn" type="submit"><span>{{LANG send}}</span></button></div>
 				<div class="clear"></div>
