--- a/apps/default/home/templates/home/includes/create-story.html
+++ b/apps/default/home/templates/home/includes/create-story.html
@@ -12,12 +12,12 @@
       	</div>
       	<div class="form-group">
   			<div class="form-control selecet-file-control" onclick="$('#story-file').trigger('click');">
-  				<button class=" btn btn-info" type="button">{{LANG select_file}}</button>
-  				<span class="story-file-name">{{LANG no_file_choosen}}</span>
+  				<button class=" btn btn-info" type="button">Seleccione Archivo</button>
+  				<span class="story-file-name">Archivo no elegido</span>
   			</div>
   		</div>
       	<div class="form-group publish">
-      		<button type="submit" class="btn btn-info">{{LANG publish}}</button>
+      		<button type="submit" class="btn btn-info">Publicar</button>
       		<button type="reset" class="btn btn-default" id="close-anim-modal">{{LANG close}}</button>
       	</div>
       	<input class="hidden" id="story-file" type="file" name="file" accept="image/*, video/*">
