--- a/apps/default/home/templates/home/includes/post-video.html
+++ b/apps/default/home/templates/home/includes/post-video.html
@@ -16,7 +16,7 @@
 			<ul class="dropdown-menu zoom">
 				<?php if ($post_data['is_owner'] == true) { ?>
 					<li onclick="delete_post(<?php echo $post_data['post_id']; ?>);">
-				  		<a href="javascript:void(0);">{{LANG delete_post}}</a>
+				  		<a href="javascript:void(0);">Eliminar Post</a>
 				  	</li>
 			    	<li onclick="edit_post(<?php echo $post_data['post_id']; ?>);">
 			    		<a href="javascript:void(0);">{{LANG edit_post}}</a>
