--- a/apps/default/home/templates/home/includes/story.html
+++ b/apps/default/home/templates/home/includes/story.html
@@ -10,7 +10,7 @@
 				</time>
 			</h5>
 		</div>
-		<div class="close-modal" title="{{LANG close}}">
+		<div class="close-modal" title="Cerrar">
 			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x" style="width: 25px;height: 25px;margin-top: -3px;"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
 		</div>
 
