--- a/apps/default/home/templates/home/includes/upload-image.html
+++ b/apps/default/home/templates/home/includes/upload-image.html
@@ -11,13 +11,13 @@
 	</div>
   	<form class="form" id="upload-post-image" action="{{CONFIG site_url}}/aj/posts/upload-post-images">
 		<div class="form-group">
-      		<textarea class="form-control pp_make_post" name="caption" rows="3" placeholder="{{LANG add_post_caption}}"></textarea>
+      		<textarea class="form-control pp_make_post" name="caption" rows="3" placeholder="Agregar título de publicación"></textarea>
       	</div>
       	<div class="images-renderer">
       		<div class="select-images" onclick="$('#upload-images').trigger('click');">
 				<span>
       				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg>
-					<h5>{{LANG choose_up210img}}</h5>
+					<h5>Elige hasta 10 imágenes</h5>
 				</span>
       		</div>
       	</div>
@@ -91,7 +91,7 @@
         <?php } ?>
 		
       	<div class="form-group publish">
-      		<button type="submit" class="btn btn-info" id="submit_image_btn">{{LANG publish}}</button>
+      		<button type="submit" class="btn btn-info" id="submit_image_btn">Publicar</button>
       		<button type="reset" class="btn btn-default" id="close-anim-image-modal">{{LANG close}}</button>
       	</div>
         <input class="hidden" id="upload-images" type="file" name="images[]" multiple accept="image/*">
