--- a/apps/default/home/templates/home/includes/upload-video.html
+++ b/apps/default/home/templates/home/includes/upload-video.html
@@ -11,19 +11,19 @@
 	</div>
   	<form class="form" id="upload-post-video" action="{{CONFIG site_url}}/aj/posts/upload-post-video">
 		<div class="form-group">
-      		<textarea class="form-control" name="caption" rows="3" placeholder="{{LANG add_post_caption}}"></textarea>
+      		<textarea class="form-control" name="caption" rows="3" placeholder="Agregar título de publicación"></textarea>
       	</div>
   		<div class="form-group">
 	  		<div class="form-control selecet-file-control" onclick="$('#post-video').trigger('click');">
-				<button class="btn btn-info" type="button">{{LANG select_file}}</button>
-				<span class="video-file-name">{{LANG no_file_choosen}}</span>
+				<button class="btn btn-info" type="button">Seleccione Archivo</button>
+				<span class="video-file-name">Archivo no elegido</span>
 				<div id="post_video_prnt" class="hidden embed-responsive embed-responsive-16by9">
 					<video id="post__video" controls></video>
 				</div>
 			</div>
 		</div>
       	<div class="form-group publish">
-      		<button type="submit" class="btn btn-info">{{LANG publish}}</button>
+      		<button type="submit" class="btn btn-info">Publicar</button>
       		<button type="reset" class="btn btn-default" id="close-anim-modal">{{LANG close}}</button>
       	</div>
       	<input class="hidden" type="file" name="video" id="post-video" accept="video/*">
