--- a/apps/default/messages/templates/messages/index.html
+++ b/apps/default/messages/templates/messages/index.html
@@ -57,7 +57,7 @@
 				<div class="pp_srch_msg">
 					<form class="form search-users">
 						<div class="text-input">
-							<input type="text" class="form-control" placeholder="{{LANG search}}.." id="search-chats">
+							<input type="text" class="form-control" placeholder="Buscar.." id="search-chats">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
 						</div>			
 					</form>
